--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-httpauth",
-  "version": "1.0.12",
+  "name": "@alexandrainst/node-red-http-basic-auth",
+  "version": "2.0.0",
   "description": "Node which implements HTTP Basic/Digest Authorization.",
   "keywords": [
     "node-red",
@@ -15,10 +15,10 @@
   },
   "repository": {
 	  "type": "git",
-	  "url": "https://github.com/endemecio02/node-red-contrib-httpauth.git"
+	  "url": "https://github.com/alexandrainst/node-red-http-basic-auth.git"
   },
   "engines": {
-	  "node": "^0.12.7"
+	  "node": ">=10"
   },
   "node-red": {
     "nodes": {
