--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "@alexandrainst/node-red-http-basic-auth",
-  "version": "2.0.0",
-  "description": "Node which implements HTTP Basic/Digest Authorization.",
-  "keywords": [
-    "node-red",
-	"http",
-	"authorization",
-	"basic",
-	"digest"
-  ],
-  "author": "Endemecio Santana",
-  "license": "GPL-2.0",
-  "dependencies": {
-  },
-  "repository": {
-	  "type": "git",
-	  "url": "https://github.com/alexandrainst/node-red-http-basic-auth.git"
-  },
-  "engines": {
-	  "node": ">=10"
-  },
-  "node-red": {
-    "nodes": {
-      "node-red-contrib-httpauth": "nodes/http-auth.js",
-      "node-red-contrib-httpauthcred": "nodes/http-auth-cred.js",
-      "node-red-contrib-httpauthfile": "nodes/http-auth-file.js"
-    }
-  }
+	"name": "@alexandrainst/node-red-http-basic-auth",
+	"version": "2.0.0",
+	"description": "Node which implements HTTP Basic/Digest Authorization.",
+	"keywords": [
+		"node-red",
+		"http",
+		"authorization",
+		"basic",
+		"digest"
+	],
+	"author": "Endemecio Santana",
+	"license": "GPL-2.0",
+	"dependencies": {},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/alexandrainst/node-red-http-basic-auth.git"
+	},
+	"engines": {
+		"node": ">=10"
+	},
+	"node-red": {
+		"nodes": {
+			"node-red-contrib-httpauth": "nodes/http-auth.js",
+			"node-red-contrib-httpauthcred": "nodes/http-auth-cred.js",
+			"node-red-contrib-httpauthfile": "nodes/http-auth-file.js"
+		}
+	}
 }
